--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,11 +3,11 @@
     <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
   <div class="container">
-    <a class="navbar-brand" href="#"><img src="../../assets/images/schenck-logo.png"></a>
+    <a class="navbar-brand" href="#" [routerLink]="['/home']"><img src="../../assets/images/schenck-logo.png"></a>
     <div class="collapse navbar-collapse" [collapse]="isCollapsed">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Benefits Survey</a>
+          <a class="nav-link" href="#">Admin</a>
         </li>
       </ul>
     </div>
