--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" [collapse]="isCollapsed">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Admin</a>
+          <a class="nav-link" href="#" [routerLink]="['/admin']">Admin</a>
         </li>
       </ul>
     </div>
