refactored login out of core

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,11 @@
+<div *ngIf="emulatedTeamMember?.TeamMemberId !== defaultTeamMember?.TeamMemberId" class="container-fluid">
+  <div class="alert alert-danger text-center">
+    You are currently impersonating {{emulatedTeamMember?.FirstName}} {{emulatedTeamMember?.LastName}}
+    <p><a href="javascript:;" class="alert-link" (click)="resetToDefaultTeamMember()">Stop impersonating</a>
+    </p>
+  </div>
+</div>
+
 <nav class="navbar navbar-toggleable-md">
   <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isCollapsed = !isCollapsed">
     <i class="fa fa-bars" aria-hidden="true"></i>
