--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,6 +15,9 @@
     <div class="collapse navbar-collapse" [collapse]="isCollapsed">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="#" [routerLink]="['/coach']">Coach</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#" [routerLink]="['/admin']">Admin</a>
         </li>
       </ul>
