getting list of active team members in coach view

--- a/src/app/coach/manage/manage.component.html
+++ b/src/app/coach/manage/manage.component.html
@@ -3,3 +3,14 @@
     <h1>Manage Coaches</h1>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-4">
+    List of Coaches:
+  </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+      <input name="Coach" [typeahead]="coachList" [(ngModel)]="selected" typeaheadOptionsLimit="8" typeaheadOptionField="LastFirstName"
+        class="form-control">
+    </div>
+  </div>
