--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'variables';
-@import '../node_modules/bootstrap/scss/bootstrap';
 
-.row {
-  margin-top: 18px;
-}
+@import '~https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
+@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
