--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,9 @@
 
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 
+body {
+  padding: 2em 23em;
+}
