--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,26 +1,5 @@
-<div *ngIf="(emulatedTeamMember$ | async)?.TeamMemberId !== (defaultTeamMember$ | async)?.TeamMemberId" class="container-fluid">
-  <div class="alert alert-danger text-center">
-    You are currently impersonating {{(emulatedTeamMember$ | async)?.FirstName}} {{(emulatedTeamMember$ | async)?.LastName}}
-    <p><a href="javascript:;" class="alert-link" (click)="resetToDefaultTeamMember()">Stop impersonating</a>
-    </p>
-  </div>
-</div>
-
-<nav class="navbar navbar-toggleable-md">
-  <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isCollapsed = !isCollapsed">
-    <i class="fa fa-bars" aria-hidden="true"></i>
-  </button>
-  <div class="container">
-    <a class="navbar-brand" href="#" [routerLink]="['/home']"><img src="../../assets/images/schenck-logo.png"></a>
-    <div class="collapse navbar-collapse" [collapse]="isCollapsed">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['/coach']">Coach</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['/admin']">Admin</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<md-toolbar>
+  <button md-button color="primary" routerLink="/home"><img src="../../assets/images/schenck-logo.png"></button>
+  <button md-button color="primary" routerLink="/coach">Coach</button>
+  <button md-button color="primary" routerLink="/admin">Admin</button>
+</md-toolbar>
