--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,23 @@
-<h1 class="mat-display-1">Sign In</h1>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
-  <md-form-field class="full-width">
-    <input mdInput type="text" placeholder="User Name" formControlName="username">
-    <md-hint>Use your Windows username</md-hint>
-    <md-error>This field is required</md-error>
-  </md-form-field>
-  <md-form-field class="full-width">
-    <input mdInput type="password" placeholder="Password" formControlName="password">
-    <md-hint>Use your Windows password</md-hint>
-    <md-error>This field is required</md-error>
-  </md-form-field>
-  <button md-raised-button color="accent">Click me!</button>
-</form>
+<md-card>
+  <md-card-title>
+    <h1 class="mat-headline">Sign In</h1>
+  </md-card-title>
+  <md-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
+      <md-form-field class="full-width">
+        <input mdInput type="text" placeholder="User Name" formControlName="username">
+        <md-hint>Use your Windows username</md-hint>
+        <md-error>This field is required</md-error>
+      </md-form-field>
+      <md-form-field class="full-width">
+        <input mdInput type="password" placeholder="Password" formControlName="password">
+        <md-hint>Use your Windows password</md-hint>
+        <md-error>This field is required</md-error>
+      </md-form-field>
+      <button type="submit" md-raised-button color="accent">Click me!</button>
+    </form>
+  </md-card-content>
+</md-card>
+
+
+
