--- a/src/app/main/landing-page/landing-page.component.html
+++ b/src/app/main/landing-page/landing-page.component.html
@@ -1,1 +1,1 @@
-<h1>Welcome {{(teamMember | async)?.FirstName}} {{(teamMember | async)?.LastName}}!</h1>
+<h1 class="mat-display-1">Welcome {{(teamMember | async)?.FirstName}} {{(teamMember | async)?.LastName}}!</h1>
