style tweaks for header

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<md-toolbar class="mat-typography">
+<md-toolbar class="mat-typography transparent-background">
   <button md-button color="primary" routerLink="/home"><img src="../../assets/images/schenck-logo.png"></button>
   <button md-button color="primary" routerLink="/coach">Coach</button>
   <button md-button color="primary" routerLink="/admin">Admin</button>
