--- a/src/app/main/landing-page/landing-page.component.html
+++ b/src/app/main/landing-page/landing-page.component.html
@@ -10,17 +10,23 @@
       </md-option>
     </md-autocomplete>
     <section *ngIf="selectedTeamMember | async; let selectedTeamMember">
-      <h2>Team Member Information:</h2>
-      <md-list>
-        <md-list-item>
-          <h4>First Name: </h4> {{selectedTeamMember.TeamMemberFirstName}}</md-list-item>
-        <md-list-item>
-          <h4>Last Name: </h4> {{selectedTeamMember.TeamMemberLastName}}</md-list-item>
-        <md-list-item>
-          <h4>Coach First Name: </h4> {{selectedTeamMember.CoachFirstName}}</md-list-item>
-        <md-list-item>
-          <h4>Coach First Name: </h4> {{selectedTeamMember.CoachLastName}}</md-list-item>
-      </md-list>
+      <h2>Team Member</h2>
+      <p><span class="mat-body-2">Name: </span>{{selectedTeamMember.TeamMemberFirstName}} {{selectedTeamMember.TeamMemberLastName}}</p>
+      <p><span class="mat-body-2">Coach: </span>{{selectedTeamMember.CoachFirstName}} {{selectedTeamMember.CoachLastName}}</p>
+      <md-form-field>
+        <input type="text" mdInput [formControl]="coachControl" [mdAutocomplete]="auto" placeholder="Select a Coach">
+      </md-form-field>
+      <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName">
+        <md-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
+          {{ teammember.TeamMemberLastName}}, {{ teammember.TeamMemberFirstName }}
+        </md-option>
+      </md-autocomplete>
+      <section *ngIf="selectedTeamMember.CoachFirstName; else noCoach">
+        <button md-raised-button color="accent">Update Coach</button>
+      </section>
+      <ng-template #noCoach>
+        <button md-raised-button color="accent">Assign Coach</button>
+      </ng-template>
     </section>
   </md-card-content>
 </md-card>
