layout adjustments for app.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,6 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 
-/* body {
-  padding: 2em 23em;
-} */
+body {
+  padding: .5em 19em;
+}
