--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,6 @@
 <md-toolbar class="mat-typography transparent-background">
   <button md-button color="primary" routerLink="/home"><img src="../../assets/images/schenck-logo.png"></button>
+  <button md-button color="primary" routerLink="/home">Team Member</button>
   <button md-button color="primary" routerLink="/coach">Coach</button>
   <button md-button color="primary" routerLink="/admin">Admin</button>
   <span class="toolbar-spacer"></span>
