--- a/src/app/coach/manage/manage.component.html
+++ b/src/app/coach/manage/manage.component.html
@@ -1,5 +1,6 @@
-<!-- <h1 class="mat-display-1">Manage Coaches</h1>
-<md-card>
+<h1 class="mat-display-1">View Coaches</h1>
+
+<!-- <md-card>
   <md-card-content>
     <md-form-field>
       <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Team Member">
