--- a/src/app/coach/manage/manage.component.html
+++ b/src/app/coach/manage/manage.component.html
@@ -1,27 +1,18 @@
 <h1 class="mat-display-1">View Coaches</h1>
 
-<!-- <md-card>
+<md-card>
   <md-card-content>
     <md-form-field>
-      <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Team Member">
+      <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Coach">
+      <md-hint>Only team members that are currently coaches will be shown</md-hint>
     </md-form-field>
-    <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName">
-      <md-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
-        {{ teammember.TeamMemberLastName}}, {{ teammember.TeamMemberFirstName }}
+    <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName" (optionSelected)="onCoachSelected()">
+      <md-option *ngFor="let coach of filteredTeamMembers | async" [value]="coach">
+        {{ coach.CoachLastName}}, {{ coach.CoachFirstName }}
       </md-option>
     </md-autocomplete>
-    <section *ngIf="selectedTeamMember | async; let selectedTeamMember">
-      <h2>Team Member Information:</h2>
-      <md-list>
-        <md-list-item>
-          <h4>First Name: </h4> {{selectedTeamMember.TeamMemberFirstName}}</md-list-item>
-        <md-list-item>
-          <h4>Last Name: </h4> {{selectedTeamMember.TeamMemberLastName}}</md-list-item>
-        <md-list-item>
-          <h4>Coach First Name: </h4> {{selectedTeamMember.CoachFirstName}}</md-list-item>
-        <md-list-item>
-          <h4>Coach First Name: </h4> {{selectedTeamMember.CoachLastName}}</md-list-item>
-      </md-list>
+    <section *ngIf="selectedCoach">
+      table
     </section>
   </md-card-content>
-</md-card> -->
+</md-card>
