--- a/src/app/coach/manage/manage.component.html
+++ b/src/app/coach/manage/manage.component.html
@@ -12,8 +12,7 @@
       </md-option>
     </md-autocomplete>
     <section *ngIf="associatedTeamMembers">
-      test
-      <!-- <app-associated-table [data]="associatedTeamMembers"></app-associated-table> -->
+      <app-associated-table [data]="associatedTeamMembers"></app-associated-table>
     </section>
   </md-card-content>
 </md-card>
