--- a/src/app/main/landing-page/landing-page.component.html
+++ b/src/app/main/landing-page/landing-page.component.html
@@ -17,11 +17,11 @@
         <input type="text" mdInput [formControl]="coachControl" [mdAutocomplete]="coach" placeholder="Select a Coach">
       </md-form-field>
       <md-autocomplete #coach="mdAutocomplete" [displayWith]="displayName" (optionSelected)="onMapCoachToTeamMember()">
-        <md-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
+        <md-option *ngFor="let teammember of filteredCoaches | async" [value]="teammember">
           {{ teammember.LastFirstName}}
         </md-option>
       </md-autocomplete>
-        <button md-raised-button color="accent" (click)="updateCoach()">Update Coach</button>
+      <button md-raised-button color="accent" (click)="updateCoach()">Update Coach</button>
       <ng-container *ngIf="messageStatus === 1">
         <span class="mat-caption success">Coach updated successfully!</span>
       </ng-container>
