--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ body {
   padding: .5em
 }
 
+.text-center {
+  text-align: center;
+}
+
 .error {
   background-color: #ffcdd2;
   color: #b71c1c;
