--- a/src/app/admin/admin-entry/admin-entry.component.html
+++ b/src/app/admin/admin-entry/admin-entry.component.html
@@ -1,16 +1,16 @@
 <h1 class="mat-display-1">Admin</h1>
-<md-card>
-  <md-card-content>
-    <md-form-field>
-      <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Team Member">
-    </md-form-field>
-    <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName">
-      <md-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
+<mat-card>
+  <mat-card-content>
+    <mat-form-field>
+      <input type="text" matInput [formControl]="teamMemberControl" [matAutocomplete]="auto" placeholder="Select a Team Member">
+    </mat-form-field>
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayName">
+      <mat-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
         {{ teammember.LastFirstName }}
-      </md-option>
-    </md-autocomplete>
+      </mat-option>
+    </mat-autocomplete>
     <section *ngIf="selectedTeamMember | async; let selectedTeamMember">
-        <button type="button" md-raised-button color="accent" (click)="assignEmulatedTeamMember()">Impersonate Team Member</button>
+        <button type="button" mat-raised-button color="accent" (click)="assignEmulatedTeamMember()">Impersonate Team Member</button>
     </section>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
