--- a/src/app/coach/associated-table/associated-table.component.html
+++ b/src/app/coach/associated-table/associated-table.component.html
@@ -1,11 +1,11 @@
 <h4 class="mat-subheading-1">Associated Team members</h4>
-<md-table #table [dataSource]="dataSource">
+<mat-table #table [dataSource]="dataSource">
   <!-- First Name Column -->
-  <ng-container mdColumnDef="name">
-    <md-header-cell *mdHeaderCellDef> Team Member Name </md-header-cell>
-    <md-cell *mdCellDef="let element"><button md-button (click)="onAssignCoach(element.TeamMemberId)">{{element.LastFirstName}}</button></md-cell>
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Team Member Name </mat-header-cell>
+    <mat-cell *matCellDef="let element"><button mat-button (click)="onAssignCoach(element.TeamMemberId)">{{element.LastFirstName}}</button></mat-cell>
   </ng-container>
 
-  <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-  <md-row *mdRowDef="let row; columns: displayedColumns;"></md-row>
-</md-table>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
