--- a/src/app/coach/manage/manage.component.html
+++ b/src/app/coach/manage/manage.component.html
@@ -1,18 +1,18 @@
 <h1 class="mat-display-1">View Coaches</h1>
 
-<md-card>
-  <md-card-content>
-    <md-form-field>
-      <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Coach">
-      <md-hint>Only current coaches will be displayed</md-hint>
-    </md-form-field>
-    <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName" (optionSelected)="onCoachSelected()">
-      <md-option *ngFor="let coach of filteredTeamMembers | async" [value]="coach">
+<mat-card>
+  <mat-card-content>
+    <mat-form-field>
+      <input type="text" matInput [formControl]="teamMemberControl" [matAutocomplete]="auto" placeholder="Select a Coach">
+      <mat-hint>Only current coaches will be displayed</mat-hint>
+    </mat-form-field>
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayName" (optionSelected)="onCoachSelected()">
+      <mat-option *ngFor="let coach of filteredTeamMembers | async" [value]="coach">
         {{ coach.LastFirstName}}
-      </md-option>
-    </md-autocomplete>
+      </mat-option>
+    </mat-autocomplete>
     <section *ngIf="associatedTeamMembers">
       <app-associated-table [data]="associatedTeamMembers"></app-associated-table>
     </section>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
