--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,17 +1,17 @@
-<md-toolbar class="mat-typography transparent-background">
+<mat-toolbar class="mat-typography transparent-background">
   <img src="../../assets/images/schenck-logo.png">
   <ng-container *ngIf="hasAccess$ | async">
-    <button md-button color="primary" routerLink="/home">Team Member</button>
-    <button md-button color="primary" routerLink="/coach">Coach</button>
-    <button md-button color="primary" routerLink="/admin">Admin</button>
+    <button mat-button color="primary" routerLink="/home">Team Member</button>
+    <button mat-button color="primary" routerLink="/coach">Coach</button>
+    <button mat-button color="primary" routerLink="/admin">Admin</button>
   </ng-container>
   <span class="toolbar-spacer"></span>
-  <md-icon>person</md-icon>
+  <mat-icon>person</mat-icon>
   <span>{{(defaultTeamMember$ | async)?.FirstName}} {{(defaultTeamMember$ | async)?.LastName}}</span>
-  <button md-button (click)="onLogout()">logout</button>
-  <md-toolbar-row *ngIf="(defaultTeamMember$ | async)?.TeamMemberId !== (emulatedTeamMember$ | async)?.TeamMemberId">
+  <button mat-button (click)="onLogout()">logout</button>
+  <mat-toolbar-row *ngIf="(defaultTeamMember$ | async)?.TeamMemberId !== (emulatedTeamMember$ | async)?.TeamMemberId">
     <span class="toolbar-spacer"></span>
     <span style="color: red">Logged in as: {{(emulatedTeamMember$ | async)?.FirstName}} {{(emulatedTeamMember$ | async)?.LastName}}</span>
-    <button md-button color="warn" (click)="resetToDefaultTeamMember()">Stop impersonating</button>
-  </md-toolbar-row>
-</md-toolbar>
+    <button mat-button color="warn" (click)="resetToDefaultTeamMember()">Stop impersonating</button>
+  </mat-toolbar-row>
+</mat-toolbar>
