--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,23 @@
-<md-card>
-  <md-card-title>
+<mat-card>
+  <mat-card-title>
     <h1 class="mat-headline">Sign In</h1>
-  </md-card-title>
-  <md-card-content>
+  </mat-card-title>
+  <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
-      <md-form-field class="full-width">
-        <input mdInput type="text" placeholder="User Name" formControlName="username">
-        <md-hint>Use your Windows username</md-hint>
-        <md-error>This field is required</md-error>
-      </md-form-field>
-      <md-form-field class="full-width">
-        <input mdInput type="password" placeholder="Password" formControlName="password">
-        <md-hint>Use your Windows password</md-hint>
-        <md-error>This field is required</md-error>
-      </md-form-field>
-      <button type="submit" md-raised-button color="accent" [disabled]="!loginForm.valid">Log in</button>
+      <mat-form-field class="full-width">
+        <input matInput type="text" placeholder="User Name" formControlName="username">
+        <mat-hint>Use your Windows username</mat-hint>
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <input matInput type="password" placeholder="Password" formControlName="password">
+        <mat-hint>Use your Windows password</mat-hint>
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+      <button type="submit" mat-raised-button color="accent" [disabled]="!loginForm.valid">Log in</button>
     </form>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
 
 
 
