--- a/src/app/main/landing-page/landing-page.component.html
+++ b/src/app/main/landing-page/landing-page.component.html
@@ -1,27 +1,27 @@
 <h1 class="mat-display-1">Assign a coach</h1>
-<md-card>
-  <md-card-content>
-    <md-form-field>
-      <input type="text" mdInput [formControl]="teamMemberControl" [mdAutocomplete]="auto" placeholder="Select a Team Member">
-    </md-form-field>
-    <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayName" (optionSelected)="onTeamMemberSelected()">
-      <md-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
+<mat-card>
+  <mat-card-content>
+    <mat-form-field>
+      <input type="text" matInput [formControl]="teamMemberControl" [matAutocomplete]="auto" placeholder="Select a Team Member">
+    </mat-form-field>
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayName" (optionSelected)="onTeamMemberSelected()">
+      <mat-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
         {{ teammember.LastFirstName}}
-      </md-option>
-    </md-autocomplete>
+      </mat-option>
+    </mat-autocomplete>
     <section *ngIf="selectedTeamMember">
       <h2>Team Member</h2>
       <p><span class="mat-body-2">Name: </span>{{selectedTeamMember.FirstName}} {{selectedTeamMember.LastName}}</p>
       <p><span class="mat-body-2">Coach: </span>{{selectedTeamMemberCoach.FirstName}} {{selectedTeamMemberCoach.LastName}}</p>
-      <md-form-field>
-        <input type="text" mdInput [formControl]="coachControl" [mdAutocomplete]="coach" placeholder="Select a Coach">
-      </md-form-field>
-      <md-autocomplete #coach="mdAutocomplete" [displayWith]="displayName" (optionSelected)="onMapCoachToTeamMember()">
-        <md-option *ngFor="let teammember of filteredCoaches | async" [value]="teammember">
+      <mat-form-field>
+        <input type="text" matInput [formControl]="coachControl" [matAutocomplete]="coach" placeholder="Select a Coach">
+      </mat-form-field>
+      <mat-autocomplete #coach="matAutocomplete" [displayWith]="displayName" (optionSelected)="onMapCoachToTeamMember()">
+        <mat-option *ngFor="let teammember of filteredCoaches | async" [value]="teammember">
           {{ teammember.LastFirstName}}
-        </md-option>
-      </md-autocomplete>
-      <button md-raised-button color="accent" (click)="updateCoach()">Update Coach</button>
+        </mat-option>
+      </mat-autocomplete>
+      <button mat-raised-button color="accent" (click)="updateCoach()">Update Coach</button>
       <ng-container *ngIf="messageStatus === 1">
         <span class="mat-caption success">Coach updated successfully!</span>
       </ng-container>
@@ -29,5 +29,5 @@
         <span class="mat-caption error">There was an issue making this change!</span>
       </ng-container>
     </section>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
