added safe nav operator to handle navigation by team member from coach view

--- a/src/app/main/landing-page/landing-page.component.html
+++ b/src/app/main/landing-page/landing-page.component.html
@@ -6,19 +6,19 @@
     </mat-form-field>
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayName" (optionSelected)="onTeamMemberSelected()">
       <mat-option *ngFor="let teammember of filteredTeamMembers | async" [value]="teammember">
-        {{ teammember.LastFirstName}}
+        {{ teammember?.LastFirstName}}
       </mat-option>
     </mat-autocomplete>
     <section *ngIf="selectedTeamMember">
       <h2>Team Member</h2>
-      <p><span class="mat-body-2">Name: </span>{{selectedTeamMember.FirstName}} {{selectedTeamMember.LastName}}</p>
-      <p><span class="mat-body-2">Coach: </span>{{selectedTeamMemberCoach.FirstName}} {{selectedTeamMemberCoach.LastName}}</p>
+      <p><span class="mat-body-2">Name: </span>{{selectedTeamMember?.FirstName}} {{selectedTeamMember?.LastName}}</p>
+      <p><span class="mat-body-2">Coach: </span>{{selectedTeamMemberCoach?.FirstName}} {{selectedTeamMemberCoach?.LastName}}</p>
       <mat-form-field>
         <input type="text" matInput [formControl]="coachControl" [matAutocomplete]="coach" placeholder="Select a Coach">
       </mat-form-field>
       <mat-autocomplete #coach="matAutocomplete" [displayWith]="displayName" (optionSelected)="onMapCoachToTeamMember()">
         <mat-option *ngFor="let teammember of filteredCoaches | async" [value]="teammember">
-          {{ teammember.LastFirstName}}
+          {{ teammember?.LastFirstName}}
         </mat-option>
       </mat-autocomplete>
       <button mat-raised-button color="accent" (click)="updateCoach()">Update Coach</button>
