--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,9 @@
 <app-header></app-header>
 <div class="indent">
-  <router-outlet></router-outlet>
+  <ng-container *ngIf="(defaultTeamMember$ | async)?.TeamMemberId > 0; else invalid">
+    <router-outlet></router-outlet>
+  </ng-container>
+  <ng-template #invalid>
+    <p class="error">There was an issue retrieving your user data, try logging out and logging back in. If issue persists contact help desk.</p>
+  </ng-template>
 </div>
