--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="indent">
-  <ng-container *ngIf="(defaultTeamMember$ | async)?.TeamMemberId > 0; else invalid">
+  <ng-container *ngIf="(defaultTeamMember$ | async)?.TeamMemberId !== 0; else invalid">
     <router-outlet></router-outlet>
   </ng-container>
   <ng-template #invalid>
