--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,11 @@
 .full-width {
   width: 100%;
 }
+
+.login{
+  // padding: .5em 19em;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
