--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,12 @@ body {
   padding: .5em
 }
 
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .text-center {
   text-align: center;
 }
