--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,6 +16,7 @@
           <mat-error>This field is required</mat-error>
         </mat-form-field>
         <button type="submit" mat-raised-button color="accent" [disabled]="!loginForm.valid">Log in</button>
+        <span class="error" *ngIf="loginError">Invalid username or password!</span>
       </form>
     </mat-card-content>
   </mat-card>
