--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login">
+<!-- <div class="login">
   <mat-card class="card-width">
     <mat-card-title>
       <h1 class="mat-headline">Sign In</h1>
@@ -20,4 +20,41 @@
       </form>
     </mat-card-content>
   </mat-card>
+</div> -->
+<div class="app" fxLayout="column">
+  <header fxLayout="column">
+    <mat-toolbar fxLayout="row" fxLayoutWrap class="transparent-background mat-elevation-z1">
+      <img src="../../assets/images/schenck-logo.png" alt="Schenck Logo">
+    </mat-toolbar>
+  </header>
+  <section fxLayout="row" fxLayoutAlign="center center" class="app">
+    <mat-card fxFlex="30">
+      <mat-card-title>
+        Coach Assignment
+      </mat-card-title>
+      <mat-card-subtitle>
+        Sign In
+      </mat-card-subtitle>
+      <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
+          <mat-form-field class="full-width">
+            <input matInput type="text" placeholder="User Name" formControlName="username">
+            <mat-hint>Use your Windows username</mat-hint>
+            <mat-error>This field is required</mat-error>
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <input matInput type="password" placeholder="Password" formControlName="password">
+            <mat-hint>Use your Windows password</mat-hint>
+            <mat-error>This field is required</mat-error>
+          </mat-form-field>
+          <p>
+            <button type="submit" mat-raised-button color="accent" [disabled]="!loginForm.valid">Log in</button>
+          </p>
+          <p>
+            <span class="error" *ngIf="loginError">Invalid username or password!</span>
+          </p>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </section>
 </div>
