--- a/src/app/main/assign-coach/assign-coach.component.html
+++ b/src/app/main/assign-coach/assign-coach.component.html
@@ -1,4 +1,7 @@
 <mat-card>
+  <mat-card-title>
+    Assign a coach
+  </mat-card-title>
   <mat-card-content>
     <mat-form-field>
       <input type="text" matInput [formControl]="teamMemberControl" [matAutocomplete]="auto" placeholder="Select a Team Member">
