--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,6 +3,7 @@
   <ng-container *ngIf="hasAccess$ | async">
     <button mat-button color="primary" routerLink="/home">Team Member</button>
     <button mat-button color="primary" routerLink="/coach">Coach</button>
+    <button mat-button color="primary" routerLink="/no-coach">No Coach List</button>
     <button mat-button color="primary" routerLink="/admin">Admin</button>
   </ng-container>
   <span class="toolbar-spacer"></span>
