--- a/src/app/no-coach/no-coach-landing/no-coach-landing.component.html
+++ b/src/app/no-coach/no-coach-landing/no-coach-landing.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="teamMembers; else isLoading">
-  <app-assign-coach [teamMembers]="teamMembers"></app-assign-coach>
+  <app-no-coach-list [teamMembers]="teamMembers"></app-no-coach-list>
 </ng-container>
 <ng-template #isLoading>
   <div class="loading">
