--- a/src/app/no-coach/no-coach-list/no-coach-list.component.html
+++ b/src/app/no-coach/no-coach-list/no-coach-list.component.html
@@ -4,8 +4,8 @@
   </mat-card-title>
   <mat-card-content>
     <mat-list>
-      <mat-list-item *ngFor="let teamMember of noCoach">
-        {{teamMember.LastFirstName}}
+      <mat-list-item *ngFor="let teamMember of noCoachList">
+        <button mat-button (click)="onAssignCoach(teamMember.TeamMemberId)">{{teamMember.LastFirstName}}</button>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
