--- a/src/app/no-coach/no-coach-list/no-coach-list.component.html
+++ b/src/app/no-coach/no-coach-list/no-coach-list.component.html
@@ -3,11 +3,35 @@
     Team Members without a Coach
   </mat-card-title>
   <mat-card-content>
-    <mat-list>
-      <mat-list-item *ngFor="let teamMember of noCoachList">
-        <button mat-button (click)="onAssignCoach(teamMember.TeamMemberId)">{{teamMember.LastFirstName}}</button>
-      </mat-list-item>
-    </mat-list>
+    <div class="list-header">
+      <mat-form-field floatPlaceholder="never">
+        <input matInput #filter placeholder="Filter list">
+        <mat-hint>Enter a term to filter by</mat-hint>
+      </mat-form-field>
+    </div>
+
+    <mat-table #table [dataSource]="dataSource" matSort>
+
+      <ng-container matColumnDef="lastFirstName">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+        <mat-cell *matCellDef="let teamMember"> <button mat-button (click)="onAssignCoach(teamMember.TeamMemberId)">{{teamMember.LastFirstName}}</button> </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="location">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Location </mat-header-cell>
+        <mat-cell *matCellDef="let teamMember"> {{teamMember.Location}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="businessUnit">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Business Unit </mat-header-cell>
+        <mat-cell *matCellDef="let teamMember"> {{teamMember.BusinessUnit}} </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+    <mat-paginator #paginator [length]="noCoachList.length" [pageIndex]="0" [pageSize]="25" [pageSizeOptions]="[5, 10, 25, 100]">
+    </mat-paginator>
   </mat-card-content>
 </mat-card>
-
